cmake_minimum_required(VERSION 3.1)
# Enable C++11
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
SET(OpenCV_DIR /usr/local/include/opencv4)
project(denseFlowGpu)
find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})
add_executable(denseFlowGpu denseFlow_gpu.cpp)
target_link_libraries(denseFlowGpu ${OpenCV_LIBS})
